# libcubu

./: .clang-format  CMakeLists.txt
data/: 3.US-1  ds1  segmentation_lamp.trl  teat0.xy
include/cubu/: bundler.hpp  bundling.hpp  cubu.hpp  graph.hpp  interpolator.hpp  polyline.hpp  renderer.hpp
include/cubu/impl/internal/: linear_resource.ipp  resource_2d.ipp
include/cubu/internal/: gpu.hpp  gpu_check.hpp  kernels.hpp  linear_resource.hpp  random_states.hpp  resource_2d.hpp  validate.hpp
include/cubu/types/: edge_profile.hpp  graph.hpp  polyline.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: bundler.cu  graph.cpp  graph.hpp  interpolator.cpp  main.cpp  main.cu  polyline.cpp  renderer.cpp
src/bundling/: bundle.cu  edge_profile.cu  interpolate.cpp  interpolate.cu  separate_bundles.cpp
src/common/: bundling_job.cu  bundling_job.hpp  kernels.hpp  macros.hpp
src/core/: edge_profile.cpp  edge_profile.cu  edge_profile.hpp  graph.cpp  graph.hpp  linear_resource.hpp  linear_resource.ipp  polyline.cpp  polyline.hpp  random_states.cu  random_states.hpp  resource_2d.hpp  resource_2d.ipp
src/internal/: random_states.cu
src/internal/gpu/: advect_points.cu  download_graph.cu  generate_density_map.cu  resample_edges.cu  smooth_edges.cu  upload_graph.cu
src/internal/kernels/: advect_sites.cu  calculate_resample_count.cu  convolution.cu  generate_density_map_fast.cu  generate_density_map_slow.cu  init_random_states.cu  resample_edges.cu  smooth_lines.cu
src/kernels/: advect_sites.cu  calculate_resample_count.cu  convolution.cu  generate_density_map_fast.cu  init_random_states.cu  resample.cu  resample_count.cu  smooth_lines.cu
src/types/: edge_profile.cu  graph.cpp  polyline.cpp
tests/: CMakeLists.txt  main.cpp  tests.cpp
